@@ -5,10 +5,7 @@ import java.nio.file.Paths;
 
 import org.antlr.v4.runtime.CharStreams;
 import org.antlr.v4.runtime.CommonTokenStream;
-import org.junit.jupiter.api.MethodOrderer;
-import org.junit.jupiter.api.Order;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestMethodOrder;
+import org.junit.jupiter.api.*;
 
 import cn.edu.xjtu.sysy.ast.AstBuilder;
 import cn.edu.xjtu.sysy.ast.node.CompUnit;
@@ -18,13 +15,22 @@ import cn.edu.xjtu.sysy.error.ErrManager;
 import cn.edu.xjtu.sysy.parse.SysYLexer;
 import cn.edu.xjtu.sysy.parse.SysYParser;
 
+import java.io.File;
+import java.io.FileInputStream;
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Objects;
+
+import static org.junit.jupiter.api.DynamicTest.dynamicTest;
+
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 public final class TestSolution {
 
     private final AstPrettyPrinter app = new AstPrettyPrinter();
 
-    private CompUnit compileToAst(String s) {
+    private CompUnit compileToAst(ErrManager em, String s) {
         var cs = CharStreams.fromString(s);
         var lexer = new SysYLexer(cs);
         var tokens = new CommonTokenStream(lexer);
@@ -37,48 +43,66 @@ public final class TestSolution {
     @Test
     @Order(0)
     public void test() throws Exception {
-        Files.walk(Paths.get("src/test/resources", new String[0]), new FileVisitOption[0]).filter(path -> {
-            return path.toString().endsWith(".sy");
-        }).forEach((var path2) -> {
-            System.err.println("testing %s...".formatted(path2.toString()));
-            try {
-                var testCase = new String(Files.readAllBytes(path2));
-                var ast = compileToAst(testCase);
-                AstPassGroups.GROUP.process(ast);
-                //app.visit(ast);
-        
-                ErrManager.GLOBAL.printErrs(); 
-            } catch (IOException e) {
-                System.err.println(e);
-            }
-        });
+        var testFileStream = this.getClass().getResourceAsStream("test.sy");
+        var testCase = new String(testFileStream.readAllBytes());
+        testFileStream.close();
+
+        var ast = compileToAst(testCase);
+        AstPassGroups.GROUP.process(ast);
+        app.visit(ast);
+
+        ErrManager.GLOBAL.printErrs();
     }
 
-    /*
-    @Test
-    @Order(1)
-    public void testFunctional() throws Exception {
-        var testFileFolder = new File(this.getClass().getResource("functional").toURI());
+    private List<DynamicTest> genDynamicTest(String folder) throws Exception {
+        var testFileFolder = new File(this.getClass().getResource(folder).toURI());
         var testFiles = testFileFolder.listFiles();
-        testFiles = Arrays.stream(testFiles)
+        return Arrays.stream(testFiles)
                 .filter(f -> f.getName().endsWith(".sy"))
                 .sorted(Comparator.comparing(File::getName))
-                .toArray(File[]::new);
-        for (var testFile : testFiles) {
-            var testFileStream = new FileInputStream(testFile);
-            var testCase = new String(testFileStream.readAllBytes());
-            var ast = compileToAst(testCase);
-            AstPassGroups.GROUP.process(ast);
-            app.visit(ast);
-            testFileStream.close();
-        }
+                .map(f -> {
+                    try {
+                        var testFileStream = new FileInputStream(f);
+                        var testCase = new String(testFileStream.readAllBytes());
+                        testFileStream.close();
+                        return dynamicTest(f.getName(), () -> {
+                            var em = new ErrManager();
+                            var ast = compileToAst(em, testCase);
+                            AstPassGroups.makePassGroup(em).process(ast);
+                            // app.visit(ast);
+                            em.printErrs();
+                        });
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                        return null;
+                    }
+                })
+                .filter(Objects::nonNull)
+                .toList();
     }
 
-    @Test
+    @TestFactory
+    @Order(1)
+    public List<DynamicTest> testFunctional() throws Exception {
+        return genDynamicTest("functional");
+    }
+
+    @TestFactory
     @Order(2)
-    public void testPerformance() {
-
+    public List<DynamicTest> testHiddenFunctional() throws Exception {
+        return genDynamicTest("hidden_functional");
     }
-    */
+
+    @TestFactory
+    @Order(3)
+    public List<DynamicTest> testPerformance() throws Exception {
+        return genDynamicTest("performance");
+    }
+
+    @TestFactory
+    @Order(4)
+    public List<DynamicTest> testFinalPerformance() throws Exception {
+        return genDynamicTest("final_performance");
+    }
 
 }
